[package]
name = "dioxus-easyui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus" }
reusable = "0.1.0"
dioxus-easyui-macros = { path = "dioxus-easyui-macros" }

[dev-dependencies]

