[package]
name = "dioxus-nui"
description = "Widget library for the Dioxus framework that tries to look as similar as possible to the native widgets of a platform."
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
reusable = "0.1.0"
dioxus-nui-macros = { path = "dioxus-nui-macros" }
constcat = { version = "0.3.0", default-features = false }

[dev-dependencies]
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus" }


[features]
default = ["auto-init"]

auto-init = []          # Automatically initialize NUI when a component is used. Enabled by default.

[profile.dev]
incremental = true

[profile.release]
# Configure release to optimize for size
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
